--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
       "node": true,
       "browser": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": ["eslint:recommended"],
   "installedESLint": true,
   "parserOptions": {
       "ecmaVersion": 6,
