--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.4",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.16.0",
     "eslint": "^3.10.0",
