Add flush to kill

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "scroll-swipe",
   "version": "0.0.13",
-  "description": "lightweight vanilla JS library for detecting scroll and touch events based on custom sensitivity",
+  "description": "a lightweight Events API for detecting scroll and touch events based on custom sensitivity",
   "main": "./dist/ScrollSwipe.js",
   "eslintConfig": "./.eslint.json",
   "scripts": {
     "start": "webpack-dev-server",
     "build": "babel lib -d dist && node build.js",
-    "babel-version": "babel --version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +21,9 @@
     "node": ">=4.4.3"
   },
   "keywords": [
+    "touch events",
+    "scroll events",
+    "touch",
     "scroll",
     "detect",
     "direction",
