--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scroll-swipe",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "a lightweight Events API for detecting scroll and touch events based on custom sensitivity",
   "main": "./dist/ScrollSwipe.js",
   "eslintConfig": "./.eslint.json",
@@ -44,5 +44,8 @@
     "gulp-umd": "^0.2.0",
     "webpack": "1.12.2",
     "webpack-dev-server": "^1.16.2"
+  },
+  "overrides": {
+    "graceful-fs": "^4.2.11"
   }
 }
